src/tests/fixtures/input_types/InputTypeReferencingOutputType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
class Query {
  /** @GQLField */
  someField(args: { input: MyInputType }): string;
}

/** @GQLInput */
type MyInputType = {
  someField: Query;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/input_types/InputTypeReferencingOutputType.invalid.ts:9:14 - error: The type of MyInputType.someField must be Input Type but got: Query!.

9   someField: Query;
               ~
